fix text align center on testimonial text

--- a/css/styles.css
+++ b/css/styles.css
@@ -248,6 +248,7 @@ body {
 
   .testimonials-text {
     padding-bottom: 30px;
+    text-align: center;
   }
 
   .card {
